[package]
name = "jsonwebkey-convert"
version = "0.3.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "Convert an RSA public key between Json Web Key and DER/PEM format."
readme = "README.md"
homepage = "https://github.com/informationsea/jsonwebkey-rs"
repository = "https://github.com/informationsea/jsonwebkey-rs"
keywords = ["jsonwebkey", "jsonwebtoken"]
categories = ["authentication"]

[features]
default = []
full = ["jsonwebtoken", "pem_support"]
pem_support = ["simple_asn1", "pem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pem = { version = "0.8", optional = true }
jsonwebtoken = { version = "8.3.0", optional = true }
simple_asn1 = { version = "0.6.2", optional = true }
num-bigint = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13.0"
lazy_static = "1"
thiserror = "1"
